sql-parser/build/pmysql.output
Terminals which are not used

   YYSTART
   ADD
   ALTER
   ANALYZE
   BEFORE
   CALL
   CASCADE
   CHANGE
   CHECK
   COLUMN
   CONDITION
   CONSTRAINT
   CONTINUE
   CONVERT
   CURRENT_USER
   CURSOR
   DATABASES
   DECLARE
   DESCRIBE
   DETERMINISTIC
   DIV
   DROP
   DUAL
   EACH
   ELSEIF
   ESCAPE
   EXIT
   EXPLAIN
   FETCH
   FORCE
   FOREIGN
   GRANT
   INFILE
   INOUT
   INSENSITIVE
   ITERATE
   KEYS
   KILL
   LEAVE
   LINES
   LOAD
   LOCALTIME
   LOCALTIMESTAMP
   LOCK
   LONG
   LOOP
   MATCH
   MINUTE_MICROSECOND
   MINUTE_SECOND
   MODIFIES
   NO_WRITE_TO_BINLOG
   NUMBER
   OPTIMIZE
   OPTION
   OPTIONALLY
   OUT
   OUTFILE
   PRECISION
   PROCEDURE
   PURGE
   READ
   READS
   REFERENCES
   RELEASE
   RENAME
   REPEAT
   REQUIRE
   RESTRICT
   RETURN
   REVOKE
   SCHEMAS
   SECOND_MICROSECOND
   SENSITIVE
   SEPARATOR
   SHOW
   SONAME
   SPATIAL
   SPECIFIC
   SQL
   SQLEXCEPTION
   SQLSTATE
   SQLWARNING
   SSL
   STARTING
   TERMINATED
   TO
   TRIGGER
   UNDO
   UNION
   UNLOCK
   USAGE
   UTC_DATE
   UTC_TIME
   UTC_TIMESTAMP
   VARYING
   WHILE
   WRITE


Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt ';'
    2          | stmt_list stmt ';'

    3 expr: NAME
    4     | NAME '.' NAME
    5     | USERVAR
    6     | STRING
    7     | INTNUM
    8     | APPROXNUM
    9     | BOOL
   10     | expr '+' expr
   11     | expr '-' expr
   12     | expr '*' expr
   13     | expr '/' expr
   14     | expr '%' expr
   15     | expr MOD expr
   16     | '-' expr
   17     | expr ANDOP expr
   18     | expr OR expr
   19     | expr XOR expr
   20     | expr '|' expr
   21     | expr '&' expr
   22     | expr '^' expr
   23     | expr SHIFT expr
   24     | NOT expr
   25     | '!' expr
   26     | expr COMPARISON expr
   27     | expr COMPARISON '(' select_stmt ')'
   28     | expr COMPARISON ANY '(' select_stmt ')'
   29     | expr COMPARISON SOME '(' select_stmt ')'
   30     | expr COMPARISON ALL '(' select_stmt ')'
   31     | expr IS NULLX
   32     | expr IS NOT NULLX
   33     | expr IS BOOL
   34     | expr IS NOT BOOL
   35     | USERVAR ASSIGN expr
   36     | expr BETWEEN expr AND expr

   37 val_list: expr
   38         | expr ',' val_list

   39 opt_val_list: /* empty */
   40             | val_list

   41 expr: expr IN '(' val_list ')'
   42     | expr NOT IN '(' val_list ')'
   43     | expr IN '(' select_stmt ')'
   44     | expr NOT IN '(' select_stmt ')'
   45     | EXISTS '(' select_stmt ')'
   46     | NAME '(' opt_val_list ')'
   47     | FCOUNT '(' '*' ')'
   48     | FCOUNT '(' expr ')'
   49     | FSUBSTRING '(' val_list ')'
   50     | FSUBSTRING '(' expr FROM expr ')'
   51     | FSUBSTRING '(' expr FROM expr FOR expr ')'
   52     | FTRIM '(' val_list ')'
   53     | FTRIM '(' trim_ltb expr FROM val_list ')'

   54 trim_ltb: LEADING
   55         | TRAILING
   56         | BOTH

   57 expr: FDATE_ADD '(' expr ',' interval_exp ')'
   58     | FDATE_SUB '(' expr ',' interval_exp ')'

   59 interval_exp: INTERVAL expr DAY_HOUR
   60             | INTERVAL expr DAY_MICROSECOND
   61             | INTERVAL expr DAY_MINUTE
   62             | INTERVAL expr DAY_SECOND
   63             | INTERVAL expr YEAR_MONTH
   64             | INTERVAL expr YEAR
   65             | INTERVAL expr HOUR_MICROSECOND
   66             | INTERVAL expr HOUR_MINUTE
   67             | INTERVAL expr HOUR_SECOND

   68 expr: CASE expr case_list END
   69     | CASE expr case_list ELSE expr END
   70     | CASE case_list END
   71     | CASE case_list ELSE expr END

   72 case_list: WHEN expr THEN expr
   73          | case_list WHEN expr THEN expr

   74 expr: expr LIKE expr
   75     | expr NOT LIKE expr
   76     | expr REGEXP expr
   77     | expr NOT REGEXP expr
   78     | CURRENT_TIMESTAMP
   79     | CURRENT_DATE
   80     | CURRENT_TIME
   81     | BINARY expr

   82 stmt: select_stmt

   83 select_stmt: SELECT select_opts select_expr_list
   84            | SELECT select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

   85 opt_where: /* empty */
   86          | WHERE expr

   87 opt_groupby: /* empty */
   88            | GROUP BY groupby_list opt_with_rollup

   89 groupby_list: expr opt_asc_desc
   90             | groupby_list ',' expr opt_asc_desc

   91 opt_asc_desc: /* empty */
   92             | ASC
   93             | DESC

   94 opt_with_rollup: /* empty */
   95                | WITH ROLLUP

   96 opt_having: /* empty */
   97           | HAVING expr

   98 opt_orderby: /* empty */
   99            | ORDER BY groupby_list

  100 opt_limit: /* empty */
  101          | LIMIT expr
  102          | LIMIT expr ',' expr

  103 opt_into_list: /* empty */
  104              | INTO column_list

  105 column_list: NAME
  106            | STRING
  107            | column_list ',' NAME
  108            | column_list ',' STRING

  109 select_opts: /* empty */
  110            | select_opts ALL
  111            | select_opts DISTINCT
  112            | select_opts DISTINCTROW
  113            | select_opts HIGH_PRIORITY
  114            | select_opts STRAIGHT_JOIN
  115            | select_opts SQL_SMALL_RESULT
  116            | select_opts SQL_BIG_RESULT
  117            | select_opts SQL_CALC_FOUND_ROWS

  118 select_expr_list: select_expr
  119                 | select_expr_list ',' select_expr
  120                 | '*'

  121 select_expr: expr opt_as_alias

  122 opt_as_alias: AS NAME
  123             | NAME
  124             | /* empty */

  125 table_references: table_reference
  126                 | table_references ',' table_reference

  127 table_reference: table_factor
  128                | join_table

  129 table_factor: NAME opt_as_alias index_hint
  130             | NAME '.' NAME opt_as_alias index_hint
  131             | table_subquery opt_as NAME
  132             | '(' table_references ')'

  133 opt_as: AS
  134       | /* empty */

  135 join_table: table_reference opt_inner_cross JOIN table_factor opt_join_condition
  136           | table_reference STRAIGHT_JOIN table_factor
  137           | table_reference STRAIGHT_JOIN table_factor ON expr
  138           | table_reference left_or_right opt_outer JOIN table_factor join_condition
  139           | table_reference NATURAL opt_left_or_right_outer JOIN table_factor

  140 opt_inner_cross: /* empty */
  141                | INNER
  142                | CROSS

  143 opt_outer: /* empty */
  144          | OUTER

  145 left_or_right: LEFT
  146              | RIGHT

  147 opt_left_or_right_outer: LEFT opt_outer
  148                        | RIGHT opt_outer
  149                        | /* empty */

  150 opt_join_condition: /* empty */
  151                   | join_condition

  152 join_condition: ON expr
  153               | USING '(' column_list ')'

  154 index_hint: USE KEY opt_for_join '(' index_list ')'
  155           | IGNORE KEY opt_for_join '(' index_list ')'
  156           | /* empty */

  157 opt_for_join: FOR JOIN
  158             | /* empty */

  159 index_list: NAME
  160           | index_list ',' NAME

  161 table_subquery: '(' select_stmt ')'

  162 stmt: delete_stmt

  163 delete_stmt: DELETE delete_opts FROM NAME opt_where opt_orderby opt_limit

  164 delete_opts: delete_opts LOW_PRIORITY
  165            | delete_opts QUICK
  166            | delete_opts IGNORE
  167            | /* empty */

  168 delete_stmt: DELETE delete_opts delete_list FROM table_references opt_where

  169 delete_list: NAME opt_dot_star
  170            | delete_list ',' NAME opt_dot_star

  171 opt_dot_star: /* empty */
  172             | '.' '*'

  173 delete_stmt: DELETE delete_opts FROM delete_list USING table_references opt_where

  174 stmt: insert_stmt

  175 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate

  176 opt_ondupupdate: /* empty */
  177                | ONDUPLICATE KEY UPDATE insert_asgn_list

  178 insert_opts: /* empty */
  179            | insert_opts LOW_PRIORITY
  180            | insert_opts DELAYED
  181            | insert_opts HIGH_PRIORITY
  182            | insert_opts IGNORE

  183 opt_into: INTO
  184         | /* empty */

  185 opt_col_names: /* empty */
  186              | '(' column_list ')'

  187 insert_vals_list: '(' insert_vals ')'
  188                 | insert_vals_list ',' '(' insert_vals ')'

  189 insert_vals: expr
  190            | DEFAULT
  191            | insert_vals ',' expr
  192            | insert_vals ',' DEFAULT

  193 insert_stmt: INSERT insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate

  194 insert_asgn_list: NAME COMPARISON expr
  195                 | NAME COMPARISON DEFAULT
  196                 | insert_asgn_list ',' NAME COMPARISON expr
  197                 | insert_asgn_list ',' NAME COMPARISON DEFAULT

  198 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  199 stmt: replace_stmt

  200 replace_stmt: REPLACE insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  201             | REPLACE insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  202             | REPLACE insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  203 stmt: update_stmt

  204 update_stmt: UPDATE update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

  205 update_opts: /* empty */
  206            | insert_opts LOW_PRIORITY
  207            | insert_opts IGNORE

  208 update_asgn_list: NAME COMPARISON expr
  209                 | NAME '.' NAME COMPARISON expr
  210                 | update_asgn_list ',' NAME COMPARISON expr
  211                 | update_asgn_list ',' NAME '.' NAME COMPARISON expr

  212 stmt: create_database_stmt

  213 create_database_stmt: CREATE DATABASE opt_if_not_exists NAME
  214                     | CREATE SCHEMA opt_if_not_exists NAME

  215 opt_if_not_exists: /* empty */
  216                  | IF EXISTS

  217 stmt: create_table_stmt

  218 create_table_stmt: CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  219                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  220                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  221                  | CREATE opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  222                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  223                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

  224 opt_temporary: /* empty */
  225              | TEMPORARY

  226 create_col_list: create_definition
  227                | create_col_list ',' create_definition

  228 create_definition: PRIMARY KEY '(' column_list ')'
  229                  | KEY '(' column_list ')'
  230                  | FULLTEXT KEY '(' column_list ')'
  231                  | /* empty */
  232                  | NAME data_type column_atts

  233 column_atts: /* empty */
  234            | column_atts NOT NULLX
  235            | column_atts NULLX
  236            | column_atts DEFAULT STRING
  237            | column_atts DEFAULT INTNUM
  238            | column_atts DEFAULT APPROXNUM
  239            | column_atts DEFAULT BOOL
  240            | column_atts AUTO_INCREMENT
  241            | column_atts UNIQUE '(' column_list ')'
  242            | column_atts UNIQUE KEY
  243            | column_atts PRIMARY KEY
  244            | column_atts KEY
  245            | column_atts COMMENT STRING

  246 opt_length: /* empty */
  247           | '(' INTNUM ')'
  248           | '(' INTNUM ',' INTNUM ')'

  249 opt_binary: /* empty */
  250           | BINARY

  251 opt_uz: /* empty */
  252       | opt_uz UNSIGNED
  253       | opt_uz ZEROFILL

  254 opt_csc: /* empty */
  255        | opt_csc CHAR SET STRING
  256        | opt_csc COLLATE STRING

  257 data_type: BIT opt_length
  258          | TINYINT opt_length opt_uz
  259          | SAMLLINT opt_length opt_uz
  260          | MEDIUMINT opt_length opt_uz
  261          | INTEGER opt_length opt_uz
  262          | BIGINT opt_length opt_uz
  263          | REAL opt_length opt_uz
  264          | DOUBLE opt_length opt_uz
  265          | FLOAT opt_length opt_uz
  266          | DECIMAL opt_length opt_uz
  267          | DATE
  268          | TIME
  269          | TIMESTAMP
  270          | DATETIME
  271          | YEAR
  272          | CHAR opt_length opt_csc
  273          | VARCHAR '(' INTNUM ')' opt_csc
  274          | BINARY opt_length
  275          | VARBINARY '(' INTNUM ')'
  276          | TINYBLOB
  277          | BLOB
  278          | MEDIUMBLOB
  279          | LONGBLOB
  280          | TINYTEXT opt_binary opt_csc
  281          | TEXT opt_binary opt_csc
  282          | MEDIUMTEXT opt_binary opt_csc
  283          | LONGTEXT opt_binary opt_csc
  284          | ENUM '(' enum_list ')' opt_csc
  285          | SET '(' enum_list ')' opt_csc

  286 enum_list: STRING
  287          | enum_list ',' STRING

  288 create_select_statement: opt_ignore_replace opt_as select_stmt

  289 opt_ignore_replace: /* empty */
  290                   | IGNORE
  291                   | REPLACE

  292 stmt: set_stmt

  293 set_stmt: SET set_list

  294 set_list: set_expr
  295         | set_list ',' set_expr

  296 set_expr: USERVAR COMPARISON expr
  297         | USERVAR ASSIGN expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 25
'%' (37) 14
'&' (38) 21
'(' (40) 27 28 29 30 41 42 43 44 45 46 47 48 49 50 51 52 53 57 58 132
    153 154 155 161 186 187 188 218 219 220 222 228 229 230 241 247
    248 273 275 284 285
')' (41) 27 28 29 30 41 42 43 44 45 46 47 48 49 50 51 52 53 57 58 132
    153 154 155 161 186 187 188 218 219 220 222 228 229 230 241 247
    248 273 275 284 285
'*' (42) 12 47 120 172
'+' (43) 10
',' (44) 38 57 58 90 102 107 108 119 126 160 170 188 191 192 196 197
    210 211 227 248 287 295
'-' (45) 11 16
'.' (46) 4 130 172 209 211 219 222 223
'/' (47) 13
';' (59) 1 2
'^' (94) 22
'|' (124) 20
error (256)
YYSTART (258)
NAME (259) 3 4 46 105 107 122 123 129 130 131 159 160 163 169 170 175
    193 194 195 196 197 198 200 201 202 208 209 210 211 213 214 218
    219 220 221 222 223 232
STRING (260) 6 106 108 236 245 255 256 286 287
INTNUM (261) 7 237 247 248 273 275
BOOL (262) 9 33 34 239
APPROXNUM (263) 8 238
USERVAR (264) 5 35 296 297
ASSIGN (265) 35 297
OR (266) 18
XOR (267) 19
ANDOP (268) 17
REGEXP (269) 76 77
LIKE (270) 74 75
IS (271) 31 32 33 34
IN (272) 41 42 43 44
NOT (273) 24 32 34 42 44 75 77 234
BETWEEN (274) 36
COMPARISON (275) 26 27 28 29 30 194 195 196 197 208 209 210 211 296
SHIFT (276) 23
MOD (277) 15
UMINUS (278)
ADD (279)
ALL (280) 30 110
ALTER (281)
ANALYZE (282)
AND (283) 36
ANY (284) 28
AS (285) 122 133
ASC (286) 92
AUTO_INCREMENT (287) 240
BEFORE (288)
BIGINT (289) 262
BINARY (290) 81 250 274
BIT (291) 257
BLOB (292) 277
BOTH (293) 56
BY (294) 88 99
CALL (295)
CASCADE (296)
CASE (297) 68 69 70 71
CHANGE (298)
CHAR (299) 255 272
CHECK (300)
COLLATE (301) 256
COLUMN (302)
COMMENT (303) 245
CONDITION (304)
CONSTRAINT (305)
CONTINUE (306)
CONVERT (307)
CREATE (308) 213 214 218 219 220 221 222 223
CROSS (309) 142
CURRENT_DATE (310) 79
CURRENT_TIME (311) 80
CURRENT_TIMESTAMP (312) 78
CURRENT_USER (313)
CURSOR (314)
DATABASE (315) 213
DATABASES (316)
DATE (317) 267
DATETIME (318) 270
DAY_HOUR (319) 59
DAY_MICROSECOND (320) 60
DAY_MINUTE (321) 61
DAY_SECOND (322) 62
DECIMAL (323) 266
DECLARE (324)
DEFAULT (325) 190 192 195 197 236 237 238 239
DELAYED (326) 180
DELETE (327) 163 168 173
DESC (328) 93
DESCRIBE (329)
DETERMINISTIC (330)
DISTINCT (331) 111
DISTINCTROW (332) 112
DIV (333)
DOUBLE (334) 264
DROP (335)
DUAL (336)
EACH (337)
ELSE (338) 69 71
ELSEIF (339)
END (340) 68 69 70 71
ENUM (341) 284
ESCAPE (342)
EXISTS (343) 45 216
EXIT (344)
EXPLAIN (345)
FETCH (346)
FLOAT (347) 265
FOR (348) 51 157
FORCE (349)
FOREIGN (350)
FROM (351) 50 51 53 84 163 168 173
FULLTEXT (352) 230
GRANT (353)
GROUP (354) 88
HAVING (355) 97
HIGH_PRIORITY (356) 113 181
HOUR_MICROSECOND (357) 65
HOUR_MINUTE (358) 66
HOUR_SECOND (359) 67
IF (360) 216
IGNORE (361) 155 166 182 207 290
INFILE (362)
INNER (363) 141
INOUT (364)
INSENSITIVE (365)
INSERT (366) 175 193 198
INTEGER (367) 261
INTERVAL (368) 59 60 61 62 63 64 65 66 67
INTO (369) 104 183
ITERATE (370)
JOIN (371) 135 138 139 157
KEY (372) 154 155 177 228 229 230 242 243 244
KEYS (373)
KILL (374)
LEADING (375) 54
LEAVE (376)
LEFT (377) 145 147
LIMIT (378) 101 102
LINES (379)
LOAD (380)
LOCALTIME (381)
LOCALTIMESTAMP (382)
LOCK (383)
LONG (384)
LONGBLOB (385) 279
LONGTEXT (386) 283
LOOP (387)
LOW_PRIORITY (388) 164 179 206
MATCH (389)
MEDIUMBLOB (390) 278
MEDIUMINT (391) 260
MEDIUMTEXT (392) 282
MINUTE_MICROSECOND (393)
MINUTE_SECOND (394)
MODIFIES (395)
NATURAL (396) 139
NO_WRITE_TO_BINLOG (397)
NULLX (398) 31 32 234 235
NUMBER (399)
ON (400) 137 152
ONDUPLICATE (401) 177
OPTIMIZE (402)
OPTION (403)
OPTIONALLY (404)
ORDER (405) 99
OUT (406)
OUTER (407) 144
OUTFILE (408)
PRECISION (409)
PRIMARY (410) 228 243
PROCEDURE (411)
PURGE (412)
QUICK (413) 165
READ (414)
READS (415)
REAL (416) 263
REFERENCES (417)
RELEASE (418)
RENAME (419)
REPEAT (420)
REPLACE (421) 200 201 202 291
REQUIRE (422)
RESTRICT (423)
RETURN (424)
REVOKE (425)
RIGHT (426) 146 148
ROLLUP (427) 95
SCHEMA (428) 214
SCHEMAS (429)
SECOND_MICROSECOND (430)
SELECT (431) 83 84
SENSITIVE (432)
SEPARATOR (433)
SET (434) 193 201 204 255 285 293
SHOW (435)
SAMLLINT (436) 259
SOME (437) 29
SONAME (438)
SPATIAL (439)
SPECIFIC (440)
SQL (441)
SQLEXCEPTION (442)
SQLSTATE (443)
SQLWARNING (444)
SQL_BIG_RESULT (445) 116
SQL_CALC_FOUND_ROWS (446) 117
SQL_SMALL_RESULT (447) 115
SSL (448)
STARTING (449)
STRAIGHT_JOIN (450) 114 136 137
TABLE (451) 218 219 220 221 222 223
TEMPORARY (452) 225
TERMINATED (453)
TEXT (454) 281
THEN (455) 72 73
TIME (456) 268
TIMESTAMP (457) 269
TINYINT (458) 258
TINYBLOB (459) 276
TINYTEXT (460) 280
TO (461)
TRAILING (462) 55
TRIGGER (463)
UNDO (464)
UNION (465)
UNIQUE (466) 241 242
UNLOCK (467)
UNSIGNED (468) 252
UPDATE (469) 177 204
USAGE (470)
USE (471) 154
USING (472) 153 173
UTC_DATE (473)
UTC_TIME (474)
UTC_TIMESTAMP (475)
VALUES (476) 175 200
VARBINARY (477) 275
VARCHAR (478) 273
VARYING (479)
WHEN (480) 72 73
WHERE (481) 86
WHILE (482)
WITH (483) 95
WRITE (484)
YEAR (485) 64 271
YEAR_MONTH (486) 63
ZEROFILL (487) 253
FSUBSTRING (488) 49 50 51
FTRIM (489) 52 53
FDATE_ADD (490) 57
FDATE_SUB (491) 58
FCOUNT (492) 47 48


Nonterminals, with rules where they appear

$accept (252)
    on left: 0
stmt_list (253)
    on left: 1 2, on right: 0 2
expr (254)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 41 42 43 44 45 46 47 48
    49 50 51 52 53 57 58 68 69 70 71 74 75 76 77 78 79 80 81,
    on right: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34 35 36 37 38 41 42 43 44 48 50 51 53 57 58
    59 60 61 62 63 64 65 66 67 68 69 71 72 73 74 75 76 77 81 86 89
    90 97 101 102 121 137 152 189 191 194 196 208 209 210 211 296 297
val_list (255)
    on left: 37 38, on right: 38 40 41 42 49 52 53
opt_val_list (256)
    on left: 39 40, on right: 46
trim_ltb (257)
    on left: 54 55 56, on right: 53
interval_exp (258)
    on left: 59 60 61 62 63 64 65 66 67, on right: 57 58
case_list (259)
    on left: 72 73, on right: 68 69 70 71 73
stmt (260)
    on left: 82 162 174 199 203 212 217 292, on right: 1 2
select_stmt (261)
    on left: 83 84, on right: 27 28 29 30 43 44 45 82 161 198 202 288
opt_where (262)
    on left: 85 86, on right: 84 163 168 173 204
opt_groupby (263)
    on left: 87 88, on right: 84
groupby_list (264)
    on left: 89 90, on right: 88 90 99
opt_asc_desc (265)
    on left: 91 92 93, on right: 89 90
opt_with_rollup (266)
    on left: 94 95, on right: 88
opt_having (267)
    on left: 96 97, on right: 84
opt_orderby (268)
    on left: 98 99, on right: 84 163 204
opt_limit (269)
    on left: 100 101 102, on right: 84 163 204
opt_into_list (270)
    on left: 103 104, on right: 84
column_list (271)
    on left: 105 106 107 108, on right: 104 107 108 153 186 228 229
    230 241
select_opts (272)
    on left: 109 110 111 112 113 114 115 116 117, on right: 83 84 110
    111 112 113 114 115 116 117
select_expr_list (273)
    on left: 118 119 120, on right: 83 84 119
select_expr (274)
    on left: 121, on right: 118 119
opt_as_alias (275)
    on left: 122 123 124, on right: 121 129 130
table_references (276)
    on left: 125 126, on right: 84 126 132 168 173 204
table_reference (277)
    on left: 127 128, on right: 125 126 135 136 137 138 139
table_factor (278)
    on left: 129 130 131 132, on right: 127 135 136 137 138 139
opt_as (279)
    on left: 133 134, on right: 131 288
join_table (280)
    on left: 135 136 137 138 139, on right: 128
opt_inner_cross (281)
    on left: 140 141 142, on right: 135
opt_outer (282)
    on left: 143 144, on right: 138 147 148
left_or_right (283)
    on left: 145 146, on right: 138
opt_left_or_right_outer (284)
    on left: 147 148 149, on right: 139
opt_join_condition (285)
    on left: 150 151, on right: 135
join_condition (286)
    on left: 152 153, on right: 138 151
index_hint (287)
    on left: 154 155 156, on right: 129 130
opt_for_join (288)
    on left: 157 158, on right: 154 155
index_list (289)
    on left: 159 160, on right: 154 155 160
table_subquery (290)
    on left: 161, on right: 131
delete_stmt (291)
    on left: 163 168 173, on right: 162
delete_opts (292)
    on left: 164 165 166 167, on right: 163 164 165 166 168 173
delete_list (293)
    on left: 169 170, on right: 168 170 173
opt_dot_star (294)
    on left: 171 172, on right: 169 170
insert_stmt (295)
    on left: 175 193 198, on right: 174
opt_ondupupdate (296)
    on left: 176 177, on right: 175 193 198 200 201 202
insert_opts (297)
    on left: 178 179 180 181 182, on right: 175 179 180 181 182 193
    198 200 201 202 206 207
opt_into (298)
    on left: 183 184, on right: 175 193 198 200 201 202
opt_col_names (299)
    on left: 185 186, on right: 175 198 200 202
insert_vals_list (300)
    on left: 187 188, on right: 175 188 200
insert_vals (301)
    on left: 189 190 191 192, on right: 187 188 191 192
insert_asgn_list (302)
    on left: 194 195 196 197, on right: 177 193 196 197 201
replace_stmt (303)
    on left: 200 201 202, on right: 199
update_stmt (304)
    on left: 204, on right: 203
update_opts (305)
    on left: 205 206 207, on right: 204
update_asgn_list (306)
    on left: 208 209 210 211, on right: 204 210 211
create_database_stmt (307)
    on left: 213 214, on right: 212
opt_if_not_exists (308)
    on left: 215 216, on right: 213 214 218 219 220 221 222 223
create_table_stmt (309)
    on left: 218 219 220 221 222 223, on right: 217
opt_temporary (310)
    on left: 224 225, on right: 218 219 220 221 222 223
create_col_list (311)
    on left: 226 227, on right: 218 219 220 222 227
create_definition (312)
    on left: 228 229 230 231 232, on right: 226 227
column_atts (313)
    on left: 233 234 235 236 237 238 239 240 241 242 243 244 245,
    on right: 232 234 235 236 237 238 239 240 241 242 243 244 245
opt_length (314)
    on left: 246 247 248, on right: 257 258 259 260 261 262 263 264
    265 266 272 274
opt_binary (315)
    on left: 249 250, on right: 280 281 282 283
opt_uz (316)
    on left: 251 252 253, on right: 252 253 258 259 260 261 262 263
    264 265 266
opt_csc (317)
    on left: 254 255 256, on right: 255 256 272 273 280 281 282 283
    284 285
data_type (318)
    on left: 257 258 259 260 261 262 263 264 265 266 267 268 269 270
    271 272 273 274 275 276 277 278 279 280 281 282 283 284 285,
    on right: 232
enum_list (319)
    on left: 286 287, on right: 284 285 287
create_select_statement (320)
    on left: 288, on right: 220 221 222 223
opt_ignore_replace (321)
    on left: 289 290 291, on right: 288
set_stmt (322)
    on left: 293, on right: 292
set_list (323)
    on left: 294 295, on right: 293 295
set_expr (324)
    on left: 296 297, on right: 294 295


state 0

    0 $accept: . stmt_list $end

    CREATE   shift, and go to state 1
    DELETE   shift, and go to state 2
    INSERT   shift, and go to state 3
    REPLACE  shift, and go to state 4
    SELECT   shift, and go to state 5
    SET      shift, and go to state 6
    UPDATE   shift, and go to state 7

    stmt_list             go to state 8
    stmt                  go to state 9
    select_stmt           go to state 10
    delete_stmt           go to state 11
    insert_stmt           go to state 12
    replace_stmt          go to state 13
    update_stmt           go to state 14
    create_database_stmt  go to state 15
    create_table_stmt     go to state 16
    set_stmt              go to state 17


state 1

  213 create_database_stmt: CREATE . DATABASE opt_if_not_exists NAME
  214                     | CREATE . SCHEMA opt_if_not_exists NAME
  218 create_table_stmt: CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  219                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  220                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  221                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  222                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  223                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

    DATABASE   shift, and go to state 18
    SCHEMA     shift, and go to state 19
    TEMPORARY  shift, and go to state 20

    $default  reduce using rule 224 (opt_temporary)

    opt_temporary  go to state 21


state 2

  163 delete_stmt: DELETE . delete_opts FROM NAME opt_where opt_orderby opt_limit
  168            | DELETE . delete_opts delete_list FROM table_references opt_where
  173            | DELETE . delete_opts FROM delete_list USING table_references opt_where

    $default  reduce using rule 167 (delete_opts)

    delete_opts  go to state 22


state 3

  175 insert_stmt: INSERT . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  193            | INSERT . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  198            | INSERT . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 178 (insert_opts)

    insert_opts  go to state 23


state 4

  200 replace_stmt: REPLACE . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  201             | REPLACE . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  202             | REPLACE . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 178 (insert_opts)

    insert_opts  go to state 24


state 5

   83 select_stmt: SELECT . select_opts select_expr_list
   84            | SELECT . select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    $default  reduce using rule 109 (select_opts)

    select_opts  go to state 25


state 6

  293 set_stmt: SET . set_list

    USERVAR  shift, and go to state 26

    set_list  go to state 27
    set_expr  go to state 28


state 7

  204 update_stmt: UPDATE . update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

    NAME      reduce using rule 205 (update_opts)
    '('       reduce using rule 205 (update_opts)
    $default  reduce using rule 178 (insert_opts)

    insert_opts  go to state 29
    update_opts  go to state 30


state 8

    0 $accept: stmt_list . $end
    2 stmt_list: stmt_list . stmt ';'

    $end     shift, and go to state 31
    CREATE   shift, and go to state 1
    DELETE   shift, and go to state 2
    INSERT   shift, and go to state 3
    REPLACE  shift, and go to state 4
    SELECT   shift, and go to state 5
    SET      shift, and go to state 6
    UPDATE   shift, and go to state 7

    stmt                  go to state 32
    select_stmt           go to state 10
    delete_stmt           go to state 11
    insert_stmt           go to state 12
    replace_stmt          go to state 13
    update_stmt           go to state 14
    create_database_stmt  go to state 15
    create_table_stmt     go to state 16
    set_stmt              go to state 17


state 9

    1 stmt_list: stmt . ';'

    ';'  shift, and go to state 33


state 10

   82 stmt: select_stmt .

    $default  reduce using rule 82 (stmt)


state 11

  162 stmt: delete_stmt .

    $default  reduce using rule 162 (stmt)


state 12

  174 stmt: insert_stmt .

    $default  reduce using rule 174 (stmt)


state 13

  199 stmt: replace_stmt .

    $default  reduce using rule 199 (stmt)


state 14

  203 stmt: update_stmt .

    $default  reduce using rule 203 (stmt)


state 15

  212 stmt: create_database_stmt .

    $default  reduce using rule 212 (stmt)


state 16

  217 stmt: create_table_stmt .

    $default  reduce using rule 217 (stmt)


state 17

  292 stmt: set_stmt .

    $default  reduce using rule 292 (stmt)


state 18

  213 create_database_stmt: CREATE DATABASE . opt_if_not_exists NAME

    IF  shift, and go to state 34

    $default  reduce using rule 215 (opt_if_not_exists)

    opt_if_not_exists  go to state 35


state 19

  214 create_database_stmt: CREATE SCHEMA . opt_if_not_exists NAME

    IF  shift, and go to state 34

    $default  reduce using rule 215 (opt_if_not_exists)

    opt_if_not_exists  go to state 36


state 20

  225 opt_temporary: TEMPORARY .

    $default  reduce using rule 225 (opt_temporary)


state 21
